[metadata]
name = ansible-role-tripleo-aodh
summary = ansible-role-tripleo-aodh - Ansible aodh role for the TripleO project.
description-file =
    README.md
author = TripleO Team
author-email = jillr@redhat.com
home-page = https://git.openstack.org/cgit/openstack/ansible-role-tripleo-aodh
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/roles/tripleo-aodh/defaults = defaults/*
    share/ansible/roles/tripleo-aodh/meta = meta/*
    share/ansible/roles/tripleo-aodh/tasks = tasks/*
    share/ansible/roles/tripleo-aodh/templates = templates/*
    share/ansible/roles/tripleo-aodh/files = files/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

